# Tech-Lab

./: .gitignore  LICENSE  README.md  requirements.txt
Automate_Everything_with_Python/: 66_publish_website.py  pyproject.toml
Automate_The_Boring_Stuff_With_Django/: readme.md
Automate_The_Boring_Stuff_With_Django/awd_main/: settings.py
Automatizando_Osint/Extrator_de_dados/: cnpj.py
Banco_de_Dados_e_Linguagem_SQL_com_PostgreSQL/: scripts.sql
Curso_de_Python_3_do_basico_ao_avancado/105_Introducao_as_funcoes_Python/: 1.py  2.py  3.py  4.py
Curso_de_Python_3_do_basico_ao_avancado/106. Argumentos nomeados e argumentos posicionais (não nomeados) em funções/: 1.py  2.py
Desenvolvimento_de_APIs_com_Flask/: app.py
Master_Selenium_Webdriver_with_Python_using_SeleniumBase/: Pipfile  commands.txt  test_home.py
Pandas_limpeza_tratamento_dados/: 1_limpeza_tratamento_churn.ipynb
Panel_and_hvPlot_A_high-level_Data_Visualization_for_Python/: 2_hvPlot_Gallery.ipynb  pyproject.toml
Panel_and_hvPlot_A_high-level_Data_Visualization_for_Python/resources/: autompg.csv
Pydantic_V2_Essentials/: 12_Inspecting_Fields.ipynb  13_JSON_Schema_Generation.ipynb  pyproject.toml
Python_para_Finanças/: Python_para_Finanças.ipynb  acoes.csv  gol.csv
Scrapy_Masterclass/: pyproject.toml
Stack/: mineração de textos.ipynb
Sumarizacao_Texto/: 1_algoritmo_basico.ipynb
TensorFlow_Developer_Certificate_Guide/: 1.ipynb  pyproject.toml
The_Ultimate_Pandas_Bootcamp/: 2_series_at_a_glance.ipynb
The_Ultimate_Web_Scraping_With_Python_Bootcamp/: 30_beautiful_soup.ipynb  31_Tags.ipynb
(+38 files in other folders)
