[tool.poetry]
name = "panel-and-hvplot-a-high-level-data-visualization-for-python"
version = "0.1.0"
description = ""
authors = ["diego <diegoinsights@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
