[tool.poetry]
name = "tensorflow-developer-certificate-guide"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
tensorflow-datasets = "^4.9.4"
pillow = "^10.2.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
